credits et licence

--- a/site/api.html
+++ b/site/api.html
@@ -11,8 +11,8 @@
 	<!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width" />
 
-	<title>Documentation - BingMap plugin for jQuery using Bing Map api v7</title>
-  	<meta name="description" content="Documentation API - A jQuery plugin embedding Bing Maps into your website using API v7" />
+	<title>A Propos - BingMap plugin for jQuery using Bing Map api v7</title>
+  	<meta name="description" content="About - A jQuery plugin embedding Bing Maps into your website using API v7" />
 	<!-- Included CSS Files -->
 	<link rel="stylesheet" href="stylesheets/foundation.css">
 	<link rel="stylesheet" href="stylesheets/app.css">
@@ -106,7 +106,7 @@
 							<td>search_logo</td>
 							<td>boolean</td>
 							<td>non</td>
-							<td>Le click sur le logo le change en barre de recherche</td>
+							<td>Le clic sur le logo le change en barre de recherche</td>
 						</tr>
 						<tr>
 							<td>scaleBar</td>
@@ -175,7 +175,11 @@
 			</div>
 
 		</div>
-
+	<div class="row">
+			<div class="four columns">
+				<p>BingMap 2012 par Dhoko - <a href="credits.html" title="A propos de BingMap">Crédits</a></p>
+			</div>
+		</div>
 	</div>
 	<!-- container -->
 
