--- a/site/credits.html
+++ b/site/credits.html
@@ -11,8 +11,8 @@
 	<!-- Set the viewport width to device width for mobile -->
 	<meta name="viewport" content="width=device-width" />
 
-	<title>BingMap plugin for jQuery using Bing Map api v7</title>
-  	<meta name="description" content="A jQuery plugin embedding Bing Maps into your website using API v7" />
+	<title>Examples - BingMap plugin for jQuery using Bing Map api v7</title>
+  	<meta name="description" content="Examples - A jQuery plugin embedding Bing Maps into your website using API v7" />
 	<!-- Included CSS Files -->
 	<link rel="stylesheet" href="stylesheets/foundation.css">
 	<link rel="stylesheet" href="stylesheets/app.css">
@@ -23,7 +23,6 @@
 	
 	<script src="javascripts/modernizr.foundation.js"></script>
 	<link type="text/plain" rel="author" href="humans.txt" />
-
 	<!-- IE Fix for HTML5 Tags -->
 	<!--[if lt IE 9]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,34 +54,23 @@
 		<div class="row">
 			<div id="map1" class="four columns" style="height: 600px"></div>
 			<div class="eight columns">
-				<h3>BingMap pour jQuery</h3>
-				<h4 class="subheader">Ce plugin pour jQuery vous permet d'afficher une carte bing sur votre site et d'utiliser son API dans sa dernière version (7).</h4>
+				<h3>A Propos - BingMap pour jQuery</h3>
+				
+				<div class="eleven columns">
+					<img src="images/logo-accroche-reinvent-reg.png" alt="Logo Procheo" />
+					<p>BingMap est un plugin issu d'un développement au sein de mon travail à <a href="http://procheo.fr/" title="Spécialiste de l’interactivité en points de vente sur iPad & ipod">Procheo</a>. <br />
+					Le plugin est sous licence BSD.
+					</p>
+				</div>
+				
 
-				<p>Dernière version 2.0 : <b>02 Mai 2012</b></p>
 
-				<h3>Script d'appel aux serveurs Bing pour afficher la carte</h3>
-				<p>
-					<script type="text/javascript" src="https://snipt.net/embed/8763bb37f3a273102e4ae1343a47db92/"></script>
-				<blockquote>Dans cet appel on note à la fin un paramètre: <b>mkt</b>. Il s'agit de la localisation de la carte. <br />
-				Plus d'information ici : Bing - <a href="http://msdn.microsoft.com/en-us/library/gg427600.aspx" title="Retrouvez les informations sur la localisation de vos cartes">Localisation des cartes</a></blockquote>
-				</p>
 
-				<h3>Ajoutez le script sur votre site</h3>
-				<p>
-					<script type="text/javascript" src="https://snipt.net/embed/9e890861850d0fd4abc69420f3dde0a8/"></script>
-				</p>
-
-				<h3>Notre première carte : </h3>
-				<p>
-					<script type="text/javascript" src="https://snipt.net/embed/8088a206b1b9acf62c9b9e5393262940/"></script>
-
-					<br>
-					Regardons à gauche maintenant.
-				</p>
 			</div>
 
 		</div>
-		<div class="row">
+
+	<div class="row">
 			<div class="four columns">
 				<p>BingMap 2012 par Dhoko - <a href="credits.html" title="A propos de BingMap">Crédits</a></p>
 			</div>
@@ -92,11 +80,10 @@
 
 
 
-
 	<!-- Included JS Files -->
 	<script charset="UTF-8" type="text/javascript" src="https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0&mkt=fr-FR"></script>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script src="javascripts/bingmap.js"></script>
+	<script src="javascripts/bingmap.min.js"></script>
 	<script src="javascripts/foundation.js"></script>
 	<script src="javascripts/app.js"></script>
 
