--- a/site/download.html
+++ b/site/download.html
@@ -79,7 +79,11 @@
 			</div>
 
 		</div>
-
+		<div class="row">
+			<div class="four columns">
+				<p>BingMap 2012 par Dhoko - <a href="credits.html" title="A propos de BingMap">Crédits</a></p>
+			</div>
+		</div>
 	</div>
 	<!-- container -->
 
